--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://HiraSayu.github.io/idoi-site/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "rm": "rm -rf docs",
+    "mv": "mv build docs",
+    "git": "git add . && git commit && git push origin master",
+    "deploy": "npm run rm && npm run build && npm run mv && npm run git"
   },
   "eslintConfig": {
     "extends": [
